# pg-migrate

./: .gitignore  Justfile  README.md  cabal.project  flake.module.nix  flake.module.nix.example  flake.nix  mina.kdl  mori.dhall
.github/workflows/: ci.yml
.seihou/: config.dhall  manifest.json
docs/: acceptance-matrix.md  initial-spec.md  release-checklist.md
docs/masterplans/: 1-build-pg-migrate-v1-core-engine.md  2-deliver-pg-migrate-v1-integrations-and-release.md  3-migrate-initial-ecosystem-to-pg-migrate.md  4-remediate-pg-migrate-v1-audit-findings.md
docs/operations/: codd-import.md  deployment.md  hasql-migration-import.md  history-import.md  locking-and-timeouts.md  nontransactional-repair.md
docs/plans/: 1-bootstrap-the-pg-migrate-workspace-and-pure-model.md  10-provide-ephemeral-postgresql-test-support-and-acceptance-matrix.md  11-publish-v1-api-operations-and-compatibility-documentation.md  12-upgrade-kiroku-to-a-native-migration-component.md  13-upgrade-keiro-and-compose-its-kiroku-dependency.md  14-upgrade-pgmq-with-equivalent-history-validation.md  15-prove-staged-imports-and-native-append-only-upgrades.md  16-cut-over-production-and-retire-predecessor-runners.md  17-fix-cli-runner-option-overrides-and-authoring-input-safety.md  18-preserve-durable-success-through-cleanup-failures-and-async-exceptions.md  19-harden-import-adapter-parsing-audit-evidence-and-internal-totality.md  2-validate-sql-and-embed-ordered-manifests.md  20-fix-embed-authoring-numbering-recompilation-tracking-and-byte-embedding.md  (+9 more)
docs/reference/: compatibility.md  (+6 more)
examples/basic/: pg-migrate-basic-example.cabal
examples/basic/app/: Main.hs
examples/basic/migrations/accounts/: 0001-create-accounts.sql  manifest
examples/basic/migrations/billing/: 0001-create-invoices.sql  manifest
mori/: repo-id
nix/: haskell.nix  pre-commit.nix
pg-migrate/: CHANGELOG.md  pg-migrate.cabal
pg-migrate-cli/: CHANGELOG.md  pg-migrate-cli.cabal
pg-migrate-cli/src/Database/PostgreSQL/Migrate/: CLI.hs
pg-migrate-cli/src/Database/PostgreSQL/Migrate/CLI/: Handler.hs  Json.hs  Outcome.hs  Parser.hs  Text.hs  Types.hs
pg-migrate-cli/src/PgMigrate/CLI/: Prelude.hs
pg-migrate-cli/test/golden/help/: check.txt  list.txt  new.txt  plan.txt  repair.txt  status.txt  top.txt  up.txt  verify.txt
pg-migrate-cli/test/golden/json/: error.json  import.json  plan.json  repair.json  status.json  up-cleanup.json  up.json  verify.json
pg-migrate-cli/test/help-fixture/: Main.hs
pg-migrate-cli/test/integration/: Main.hs
pg-migrate-cli/test/unit/: Main.hs
pg-migrate-cli/test/unit/Test/: Handler.hs  Json.hs  Parser.hs
pg-migrate-embed/: CHANGELOG.md  pg-migrate-embed.cabal
pg-migrate-embed/src/Database/PostgreSQL/Migrate/: Embed.hs
pg-migrate-embed/src/Database/PostgreSQL/Migrate/Embed/: Authoring.hs  Internal.hs  Manifest.hs  RecompilePlugin.hs
pg-migrate-embed/test/fixtures/absolute/: manifest
pg-migrate-embed/test/fixtures/blank/: manifest
pg-migrate-embed/test/fixtures/comment/: manifest
pg-migrate-embed/test/fixtures/duplicate/: manifest
pg-migrate-embed/test/fixtures/missing/: manifest
pg-migrate-embed/test/fixtures/nested/: manifest
pg-migrate-embed/test/fixtures/non-sql/: README.txt
pg-migrate-embed/test/fixtures/parent/: manifest
pg-migrate-embed/test/fixtures/unlisted/: manifest
pg-migrate-embed/test/fixtures/valid/migrations/: 0001-first.sql  0002-second.sql  manifest
pg-migrate-embed/test/recompilation/: Main.hs
pg-migrate-embed/test/recompilation/fixture/: recompilation-probe.cabal
pg-migrate-embed/test/recompilation/fixture/app/: Main.hs  TrackedMain.hs
pg-migrate-embed/test/recompilation/fixture/migrations/: manifest
pg-migrate-embed/test/unit/: Main.hs
pg-migrate-embed/test/unit/Test/: Authoring.hs  Component.hs  Manifest.hs
pg-migrate-import-codd/: CHANGELOG.md  pg-migrate-import-codd.cabal
pg-migrate-import-codd/src/Database/PostgreSQL/Migrate/History/: Codd.hs
pg-migrate-import-codd/src/Database/PostgreSQL/Migrate/History/Codd/: Import.hs  Internal.hs  Ledger.hs  Manifest.hs  Parser.hs  Types.hs
pg-migrate-import-codd/src/PgMigrate/History/Codd/: Prelude.hs
pg-migrate-import-codd/test/integration/: Main.hs
pg-migrate-import-codd/test/unit/: Main.hs
pg-migrate-import-codd/test/unit/Test/: Evidence.hs  Ledger.hs  Manifest.hs  Parser.hs
pg-migrate-import-hasql-migration/: CHANGELOG.md  pg-migrate-import-hasql-migration.cabal
pg-migrate-import-hasql-migration/src/Database/PostgreSQL/Migrate/History/: HasqlMigration.hs
pg-migrate-import-hasql-migration/src/Database/PostgreSQL/Migrate/History/HasqlMigration/: Import.hs  Internal.hs  Ledger.hs  Parser.hs  Types.hs
pg-migrate-import-hasql-migration/src/PgMigrate/History/HasqlMigration/: Prelude.hs
pg-migrate-import-hasql-migration/test/integration/: Main.hs
pg-migrate-import-hasql-migration/test/unit/: Main.hs
pg-migrate-import-hasql-migration/test/unit/Test/: Definition.hs  Evidence.hs  Ledger.hs  Parser.hs
pg-migrate-test-support/: CHANGELOG.md  pg-migrate-test-support.cabal
pg-migrate-test-support/src/Database/PostgreSQL/Migrate/: Test.hs
pg-migrate-test-support/test/: Main.hs
pg-migrate/src/Database/PostgreSQL/: Migrate.hs
pg-migrate/src/Database/PostgreSQL/Migrate/: Definition.hs  History.hs  Inspection.hs  Internal.hs  Ledger.hs  Plan.hs  Repair.hs  Runner.hs  Sql.hs  Types.hs
pg-migrate/src/Database/PostgreSQL/Migrate/History/: Types.hs  Validation.hs
pg-migrate/src/Database/PostgreSQL/Migrate/Ledger/: Migrations.hs  Sql.hs  Types.hs
pg-migrate/src/Database/PostgreSQL/Migrate/Repair/: Types.hs
pg-migrate/src/Database/PostgreSQL/Migrate/Runner/: Connection.hs  Lock.hs  Types.hs
pg-migrate/src/Database/PostgreSQL/Migrate/Sql/: Scanner.hs
pg-migrate/src/PgMigrate/: Prelude.hs
pg-migrate/test/crash-helper/: Main.hs
pg-migrate/test/integration/: Main.hs
pg-migrate/test/unit/: Main.hs
pg-migrate/test/unit/Test/: Definition.hs  History.hs  Ledger.hs  Plan.hs  PublicApi.hs  Runner.hs  Sql.hs
scripts/: check-production-closure  create-database.sql
(+12 files in other folders)
