cabal-version:   3.8
name:            pg-migrate-import-codd
version:         1.0.0.0
synopsis:        Import Codd migration history into pg-migrate
category:        Database
maintainer:      nadeem@gmail.com
description:
  Reads supported Codd ledger shapes with Hasql, validates selected source
  evidence, and delegates target writes to pg-migrate's generic importer.

license:         BSD-3-Clause
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedStrings

  ghc-options:        -Wall -Wcompat

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Database.PostgreSQL.Migrate.History.Codd
    Database.PostgreSQL.Migrate.History.Codd.Internal
    PgMigrate.History.Codd.Prelude

  other-modules:
    Database.PostgreSQL.Migrate.History.Codd.Import
    Database.PostgreSQL.Migrate.History.Codd.Ledger
    Database.PostgreSQL.Migrate.History.Codd.Manifest
    Database.PostgreSQL.Migrate.History.Codd.Parser
    Database.PostgreSQL.Migrate.History.Codd.Types

  build-depends:
    , aeson                 >=2.2  && <2.3
    , base                  >=4.20 && <4.22
    , bytestring            >=0.12 && <0.13
    , containers            >=0.7  && <0.8
    , hasql                 >=1.10 && <1.11
    , optparse-applicative  >=0.19 && <0.20
    , pg-migrate            >=1.0  && <1.1
    , pg-migrate-cli        >=1.0  && <1.1
    , text                  >=2.1  && <2.2
    , time                  >=1.12 && <1.15

test-suite pg-migrate-import-codd-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Main.hs
  other-modules:
    Test.Evidence
    Test.Ledger
    Test.Manifest
    Test.Parser

  build-depends:
    , base                    >=4.20 && <4.22
    , bytestring              >=0.12 && <0.13
    , containers              >=0.7  && <0.8
    , optparse-applicative    >=0.19 && <0.20
    , pg-migrate
    , pg-migrate-cli
    , pg-migrate-import-codd
    , tasty                   >=1.5  && <1.6
    , tasty-hunit             >=0.10 && <0.11
    , text                    >=2.1  && <2.2
    , time                    >=1.12 && <1.15

test-suite pg-migrate-import-codd-integration
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/integration
  main-is:        Main.hs
  build-depends:
    , base                    >=4.20 && <4.22
    , bytestring              >=0.12 && <0.13
    , containers              >=0.7  && <0.8
    , hasql                   >=1.10 && <1.11
    , pg-migrate
    , pg-migrate-import-codd
    , tasty                   >=1.5  && <1.6
    , tasty-hunit             >=0.10 && <0.11
    , text                    >=2.1  && <2.2
