cabal-version:   3.8
name:            pg-migrate-import-hasql-migration
version:         1.0.0.0
synopsis:        Import hasql-migration history into pg-migrate
category:        Database
maintainer:      nadeem@gmail.com
description:
  Reads qualified hasql-migration ledgers with Hasql, verifies legacy
  base64 MD5 evidence, and delegates target writes to pg-migrate.

license:         BSD-3-Clause
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedStrings

  ghc-options:        -Wall -Wcompat

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Database.PostgreSQL.Migrate.History.HasqlMigration
    Database.PostgreSQL.Migrate.History.HasqlMigration.Internal
    PgMigrate.History.HasqlMigration.Prelude

  other-modules:
    Database.PostgreSQL.Migrate.History.HasqlMigration.Import
    Database.PostgreSQL.Migrate.History.HasqlMigration.Ledger
    Database.PostgreSQL.Migrate.History.HasqlMigration.Parser
    Database.PostgreSQL.Migrate.History.HasqlMigration.Types

  build-depends:
    , aeson                 >=2.2  && <2.3
    , base                  >=4.20 && <4.22
    , bytestring            >=0.12 && <0.13
    , containers            >=0.7  && <0.8
    , crypton               >=1.1  && <1.2
    , hasql                 >=1.10 && <1.11
    , optparse-applicative  >=0.19 && <0.20
    , pg-migrate            >=1.0  && <1.1
    , pg-migrate-cli        >=1.0  && <1.1
    , ram                   >=0.20 && <0.23
    , text                  >=2.1  && <2.2
    , time                  >=1.12 && <1.15

test-suite pg-migrate-import-hasql-migration-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Main.hs
  other-modules:
    Test.Definition
    Test.Evidence
    Test.Ledger
    Test.Parser

  build-depends:
    , aeson                              >=2.2  && <2.3
    , base                               >=4.20 && <4.22
    , bytestring                         >=0.12 && <0.13
    , containers                         >=0.7  && <0.8
    , optparse-applicative               >=0.19 && <0.20
    , pg-migrate
    , pg-migrate-cli
    , pg-migrate-import-hasql-migration
    , tasty                              >=1.5  && <1.6
    , tasty-hunit                        >=0.10 && <0.11
    , text                               >=2.1  && <2.2
    , time                               >=1.12 && <1.15

test-suite pg-migrate-import-hasql-migration-integration
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/integration
  main-is:        Main.hs
  build-depends:
    , aeson                              >=2.2  && <2.3
    , base                               >=4.20 && <4.22
    , bytestring                         >=0.12 && <0.13
    , containers                         >=0.7  && <0.8
    , hasql                              >=1.10 && <1.11
    , hasql-transaction                  >=1.2  && <1.3
    , pg-migrate
    , pg-migrate-import-hasql-migration
    , tasty                              >=1.5  && <1.6
    , tasty-hunit                        >=0.10 && <0.11
    , text                               >=2.1  && <2.2
