cabal-version:   3.8
name:            pg-migrate-test-support
version:         1.0.0.0
synopsis:        Ephemeral PostgreSQL helpers for pg-migrate tests
category:        Database
maintainer:      nadeem@gmail.com
description:
  Brackets an ephemeral PostgreSQL instance, applies a validated migration
  plan, and supplies a fresh Hasql connection to a test callback.

license:         BSD-3-Clause
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedStrings

  ghc-options:        -Wall -Wcompat

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: Database.PostgreSQL.Migrate.Test
  build-depends:
    , base          >=4.20 && <4.22
    , ephemeral-pg  >=0.2  && <0.3
    , hasql         >=1.10 && <1.11
    , pg-migrate    >=1.0  && <1.1

test-suite pg-migrate-test-support-test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base                     >=4.20 && <4.22
    , bytestring               >=0.12 && <0.13
    , containers               >=0.7  && <0.8
    , ephemeral-pg             >=0.2  && <0.3
    , hasql                    >=1.10 && <1.11
    , pg-migrate
    , pg-migrate-test-support
    , tasty                    >=1.5  && <1.6
    , tasty-hunit              >=0.10 && <0.11
    , text                     >=2.1  && <2.2
